fix(Report): make duration target value modal stretch for large defs
related to OPT-1315

--- a/client/src/modules/components/Modal/Modal.scss
+++ b/client/src/modules/components/Modal/Modal.scss
@@ -18,7 +18,6 @@ $modal-padding-h: 20px;
   flex-direction: column;
   flex-grow: 1;
   overflow-y: auto;
-
   position: relative;
 }
 
@@ -57,7 +56,7 @@ $modal-padding-h: 20px;
 }
 
 .Modal__content-container--max {
-  height: 95%;
+  min-height: 95%;
   width: 95%;
 }
 
